@@ -1,4 +1,4 @@
-(c) Copyright 2017-2023  DirectFB2 Open Source Project (fork of DirectFB)
+(c) Copyright 2017-2024  DirectFB2 Open Source Project (fork of DirectFB)
 (c) Copyright 2012-2016  DirectFB integrated media GmbH
 (c) Copyright 2001-2013  The world wide DirectFB Open Source Community (directfb.org)
 (c) Copyright 2000-2004  Convergence (integrated media) GmbH
