@@ -10,10 +10,12 @@ CONFIG_GRAPHICS_DIRECTFB2=y
 CONFIG_GRAPHICS_LITE=y
 CONFIG_INIT_ENTRYPOINT="lite_main"
 CONFIG_INPUT=y
-CONFIG_PTHREAD_CLEANUP=y
+CONFIG_PIPES=y
+CONFIG_PTHREAD_CLEANUP_STACKSIZE=1
 CONFIG_PTHREAD_MUTEX_TYPES=y
 CONFIG_SIM_FBHEIGHT=480
 CONFIG_SIM_FBWIDTH=640
+CONFIG_SIM_KEYBOARD=y
 CONFIG_SIM_TOUCHSCREEN=y
 CONFIG_SIM_X11FB=y
 CONFIG_VIDEO_FB=y
